# tts-eval

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.prompts/: new-feature.md  verify-feature.md
.spec/: evals.md  model-runners.md
eval/runners/audiobox/: Dockerfile  d.sh  run_inner.py
eval/runners/ctc/: Dockerfile  d.sh  run_inner.py
eval/runners/ctc_tortoise/: Dockerfile  d.sh  run_inner.py
eval/runners/dnsmos/: Dockerfile  d.sh  run_inner.py
eval/runners/nisqa/: Dockerfile  d.sh  run_inner.py
eval/runners/speaker_sim/: Dockerfile  d.sh  run_inner.py
eval/runners/ttsds2/: Dockerfile  d.sh  run_inner.py
eval/runners/utmos/: Dockerfile  d.sh  run_inner.py
model-runners/chatterbox_turbo/: Dockerfile  d.sh  run_inner.py
scripts/: coalesce_jsons.py  run_all.sh
scripts/plot_eval_means/: Dockerfile  d.sh  run_inner.py
src/tts_eval/: __init__.py  audiobox.py  chatterbox_turbo.py  coalesce.py  ctc.py  ctc_tortoise.py  discovery.py  dnsmos.py  io.py  model_runner_inputs.py  nisqa.py  plotting.py  progress.py  speaker_sim.py  stats.py  ttsds2.py  utmos.py  utterance_dataset_config.py  utterance_texts.py
tests/: test_audiobox.py  test_chatterbox_turbo.py  test_chatterbox_turbo_run_inner.py  test_coalesce.py  test_ctc.py  test_ctc_tortoise.py  test_dnsmos.py  test_model_runner_inputs.py  test_nisqa.py  test_plotting.py  test_speaker_sim.py  test_ttsds2.py  test_utmos.py  test_utterance_texts.py
